# CLionProjects

alin/: CMakeLists.txt  glad.c  main.cpp  shader.h
alin/glad/: glad.h
alin/learnopengl/: model.h  shader.h
fractional knapsack/: CMakeLists.txt  main.cpp
kaskus1/: CMakeLists.txt  main.cpp
kaskus2/: CMakeLists.txt  main.cpp
lagu apa ini/: CMakeLists.txt  main.cpp
penyisihan hology 1/: CMakeLists.txt  main.cpp
penyisihan hology 7/: CMakeLists.txt  main.cpp
penyisihan hology 8/: CMakeLists.txt  main.cpp
penyisihan hology 9/: CMakeLists.txt  main.cpp
warming up hology 1/: CMakeLists.txt  main.cpp
warming up hology 2/: CMakeLists.txt  main.cpp
warming up hology 3/: CMakeLists.txt  main.cpp
warming up hology 4/: CMakeLists.txt  main.cpp
